# melo-rewrite

./: .firebaserc  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.claude/skills/: deploy.md
.firebase/: hosting.YXBwcy93ZWIvb3V0.cache
apps/api/: .env.example  Dockerfile  package.json  pyproject.toml
apps/api/mello_api/: asgi.py  config.py  dev.py  main.py
apps/api/mello_api/middleware/: auth.py
apps/api/mello_api/models/: listening.py  story.py  user.py
apps/api/mello_api/repositories/: firestore.py  interfaces.py  memory.py
apps/api/mello_api/routes/: health.py  me.py  stories.py
apps/api/tests/: conftest.py  fixtures.py  test_favorites.py  test_history.py  test_me.py  test_stories.py
apps/web/: .env.example  Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: audio-player.tsx  bottom-nav.tsx  duration-filter.tsx  icon.tsx  read-along.tsx  story-card.tsx
apps/web/src/context/: auth-context.tsx  query-provider.tsx
apps/web/src/hooks/: useApiClient.ts  useAuth.ts
docs/: api.md  architecture.md  data-models.md  deploy.md
docs/adr/: 001-web-over-native.md  002-repository-pattern.md  003-cloud-run-monolith.md
infra/terraform/: artifact_registry.tf  cloudrun.tf  dns.tf  firebase.tf  iam.tf  main.tf  outputs.tf  storage.tf  terraform.tfvars.example  tfplan  variables.tf  versions.tf
scripts/: deploy-all.sh  deploy-api.sh  deploy-web.sh  generate-stories.py  seed-stories.py  test-all.sh
(+18 files in other folders)
